fix small screen overflow --fingers crossed!!

--- a/src/main.scss
+++ b/src/main.scss
@@ -82,6 +82,7 @@ body {
 .layout {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .button-black-to-gradient {
